--- a/Foodie/src/main/webapp/style.css
+++ b/Foodie/src/main/webapp/style.css
@@ -1,6 +1,14 @@
 @charset "UTF-8";
-.nav-container{
-	margin-left: 100px;
+.card-body.btn-primary, .card-body.btn-primary:hover, .card-body.btn-primary:active, .btn-primary:visited {
+       background-color: #ea0505 !important;
+   		border: none;
+}
+.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+       background-color: #ea0505 !important;
+   		border: none;
+}
+.nav-padding{
+	padding: 0px 25px !important;
 }
 .searchbar{
 	margin-left: 30%;
@@ -19,6 +27,10 @@ button a{
 .profile-name{
 	margin-left: 180px;
 }
+.btn_a{
+	width:100%
+}
+
 .top{
         padding-left: 10px;
         display: flex;
