--- a/Foodie/src/main/webapp/styles.css
+++ b/Foodie/src/main/webapp/styles.css
@@ -7,6 +7,9 @@ display-flex, .display-flex, .display-flex-center, .signup-content, .signin-cont
 list-type-ulli {
   margin: 0;
   padding: 0; }
+ .colorRed{
+	color:#ea0505;
+}
 
 /* poppins-300 - latin */
 @font-face {
